--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     <div class="overlay-container">
       <div class="overlay">
         <div class="overlay-panel overlay-left">
-          <h2>Bem-vindo de volta!</h2>
-          <p>Para continuar conectado, faça login com suas informações pessoais.</p>
+          <h1>Bem-vindo de volta!</h1>
+          <p>Para continuar conectado, faça login.</p>
           <button class="ghost" id="signIn">Entrar</button>
         </div>
         <div class="overlay-panel overlay-right">
-          <h2>Olá, Amigo!</h2>
-          <p>Inscreva-se e junte-se a nós.</p>
-          <button class="ghost" id="signUp">Registrar</button>
+          <h2>Olá!</h2>
+          <p>Inscreva-se!</p>
+          <button class="ghost" id="signUp">Registrar.</button>
         </div>
       </div>
     </div>
